changes color of header

--- a/index.html
+++ b/index.html
@@ -224,7 +224,8 @@
 
         header{
             height: 50px;
-            background-color: #191C41;
+            /*background-color: #191C41;*/
+            background-color: #ff253a;
             position: sticky;
             top: 0;
             z-index: 100;
