--- a/Assignment.html
+++ b/Assignment.html
@@ -86,10 +86,10 @@
                 text-shadow: none;
             }
             100% {
-                color: #ffe6ff;
-                text-shadow: 0 0 0.6rem #ffe6ff, 0 0 1.5rem #ff65bd,
-                -0.2rem 0.1rem 1rem #ff65bd, 0.2rem 0.1rem 1rem #ff65bd,
-                0 -0.5rem 2rem #ff2483, 0 0.5rem 3rem #ff2483;
+                color: #1d33ab;
+                text-shadow: 0 0 0.6rem #4b68e7, 0 0 1.5rem #0367a8,
+                -0.2rem 0.1rem 1rem #16548d, 0.2rem 0.1rem 1rem #1a5ec6,
+                0 -0.5rem 2rem #1a67bb, 0 0.5rem 3rem #0a6ad0;
             }
         }
 
@@ -414,19 +414,7 @@
 <body>
 <div class="ball"></div>
 <header>
-    <!-- <div class="word">
-        <span>A</span>
-        <span>S</span>
-        <span>S</span>
-        <span>I</span>
-        <span>G</span>
-        <span>N</span>
-        <span>M</span>
-        <span>E</span>
-        <span>N</span>
-        <span>T</span>
-        <span>S</span>
-    </div> -->
+
     <div class="sign">
         <span class="fast-flicker">A</span>SSI<span class="flicker">G</span>NME <span class="fast-flicker">N</span>TS
     </div>
