--- a/index.html
+++ b/index.html
@@ -523,11 +523,11 @@
                 right: 800px;
                 top: 300px;
             }
-            #contactmephone>img:hover{
+            #contactmephone>a>img:hover{
                 animation: shake 0.5s;
                 animation-iteration-count: infinite;
             }
-            #contactmeemail>img:hover{
+            #contactmeemail>a>img:hover{
                 animation: shake 0.5s;
                 animation-iteration-count: infinite;
             }
