--- a/myProjects/SPA-(Single Page Application)/index.html
+++ b/myProjects/SPA-(Single Page Application)/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Home</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="../assets/boostrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="assets/boostrap/css/bootstrap.min.css">
     <style>
         .sakuraimg{
             width: 30px;
@@ -178,7 +178,7 @@
 <header>
     <nav class="navbar navbar-expand-lg navbar-light " style="background-color: #C0C2C5 ;display: none" id="navbarheader">
         <div class="container-fluid">
-            <img class="sakuraimg" src="../assets/images/sakura.png" alt="">
+            <img class="sakuraimg" src="assets/images/sakura.png" alt="">
             <a class="navbar-brand text-success fw-bold" href="#">URESHA POS SYSTEM</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -200,8 +200,8 @@
                 </ul>
 
             </div>
-            <a href="#" id="SignUpNav"> <img id="adduser" src="../assets/images/add-user.png" class="me-3" alt=""></a>
-            <a href="#" id="loginNav"><img id="logOut" src="../assets/images/logout.png" alt=""></a>
+            <a href="#" id="SignUpNav"> <img id="adduser" src="assets/images/add-user.png" class="me-3" alt=""></a>
+            <a href="#" id="loginNav"><img id="logOut" src="assets/images/logout.png" alt=""></a>
 
         </div>
     </nav>
