--- a/index.html
+++ b/index.html
@@ -460,7 +460,7 @@
             }
             #contactMe{
                 background-color: #081023;
-                height: 900px;
+                height: 812px;
             }
             #contactMe>h1{
                 color: white;
@@ -837,7 +837,7 @@
 
         .arrow {
             position: absolute;
-            top: 50%;
+            top:70%;
             transform: translateY(-50%);
             width: 20px;
             height: 20px;
@@ -1379,13 +1379,38 @@
             left: 459px;
             top: 101px;
         }
-
-
-
+        #dropLineQuote{
+            position: absolute;
+            bottom: 152px;
+            right: 279px;
+        }
+        #dropLineQuote>h2{
+            font-size: 24px;
+            color: white;
+            font-family: 'Concert One', cursive;
+        }
+        #dropLineQuote>h2:nth-child(2){
+            position: relative;
+            left: 39px;
+          }
+        footer{
+            margin-top: -19px;
+            position: relative;
+            height: 36px;
+            background-color: #6C6B6F;
+        }
+        footer>h3{
+            font-size:15px;
+            position: absolute;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            top: 10px;
+            margin: auto;
+        }
 
     </style>
 </head>
-
 <body>
 <header>
     <ul>
@@ -1670,11 +1695,21 @@
             <a href="https://www.linkedin.com/in/tharindu-nilanga-093082226/">  <img src="assets/images/linkedin.png" alt="nilanga kumara"></a>
 
         </div>
+        <div id="dropLineQuote">
+            <h2>" WE GIVE WINGS TO YOUR BUSINESS "</h2>
+            <h2>" YOU DESCIDE WHERE TO FLY "</h2>
+
+        </div>
     </section>
     <!---------------DROP Line------------------>
    <!-- <section></section>-->
 
 </main>
+<footer>
+
+    <h3>DEVELOPED BY: NILANGA.K</h3>
+
+</footer>
 <script src="assets/js/slideshow.js"></script>
 <script src="assets/js/slidejs.js"></script>
 </body>
