--- a/Assignment.html
+++ b/Assignment.html
@@ -535,6 +535,26 @@
                     </div>
                 </div>
             </a>
+            <a href="myProjects/CSS-Framework/BoosttrapPOS/index.html" target="_blank">
+                <div class="card">
+                    <img src="assets/assignments/a12.png" alt="">
+                    <div class="textBox">
+                        <p>This is an assignment of CSS FrameWork with Boostrap.</p>
+                        <h3>Assignment 11</h3>
+                    </div>
+                </div>
+            </a>
+            <a href="myProjects/SPA-(Single%20Page%20Application)/index.html" target="_blank">
+                <div class="card">
+                    <img src="assets/assignments/a12.png" alt="">
+                    <div class="textBox">
+                        <p>This is an assignment of CSS FrameWork with Boostrap converted into SPA(Single page Application.</p>
+                        <h3>Assignment 11</h3>
+                    </div>
+                </div>
+            </a>
+
+
         </div>
     </section>
 </main>
